// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`layout goldens > careerBacon {"searchId":105} @beside 1`] = `
{
  "attrs": "f4a83fd43f9246a4",
  "decor": "7b99d7164640466b",
  "delays": null,
  "trailDelays": "7a078e112ae41257",
  "trails": "aa8017537a943a4b",
}
`;

exports[`layout goldens > careerBacon {"searchId":105} @phone 1`] = `
{
  "attrs": "197f7518f99f11aa",
  "decor": "3d88ed0a8bc041bd",
  "delays": null,
  "trailDelays": "7a078e112ae41257",
  "trails": "9a5be40dbbb065e2",
}
`;

exports[`layout goldens > careerBacon {"searchId":105} @stacked 1`] = `
{
  "attrs": "6b6a78dbdb90e4b4",
  "decor": "64fd7b24808b70fc",
  "delays": null,
  "trailDelays": "7a078e112ae41257",
  "trails": "15027ba948420857",
}
`;

exports[`layout goldens > careerBacon {"searchId":null} @beside 1`] = `
{
  "attrs": "67cc2aa417810612",
  "decor": "7b99d7164640466b",
  "delays": null,
  "trailDelays": "7a078e112ae41257",
  "trails": "aa8017537a943a4b",
}
`;

exports[`layout goldens > careerBacon {"searchId":null} @phone 1`] = `
{
  "attrs": "8e79273b1cfea043",
  "decor": "3d88ed0a8bc041bd",
  "delays": null,
  "trailDelays": "7a078e112ae41257",
  "trails": "9a5be40dbbb065e2",
}
`;

exports[`layout goldens > careerBacon {"searchId":null} @stacked 1`] = `
{
  "attrs": "3e54184c4657c6dc",
  "decor": "64fd7b24808b70fc",
  "delays": null,
  "trailDelays": "7a078e112ae41257",
  "trails": "15027ba948420857",
}
`;

exports[`layout goldens > careerMany {"searchId":105} @beside 1`] = `
{
  "attrs": "77280d48bfca0bb9",
  "decor": "7b99d7164640466b",
  "delays": null,
  "trailDelays": "e8e459a5709789ac",
  "trails": "f94e8f0aa1d273e4",
}
`;

exports[`layout goldens > careerMany {"searchId":105} @phone 1`] = `
{
  "attrs": "547ea0cab98c9a81",
  "decor": "3d88ed0a8bc041bd",
  "delays": null,
  "trailDelays": "e8e459a5709789ac",
  "trails": "4d3bed385ff4e20e",
}
`;

exports[`layout goldens > careerMany {"searchId":105} @stacked 1`] = `
{
  "attrs": "b587e7282b6afd2f",
  "decor": "64fd7b24808b70fc",
  "delays": null,
  "trailDelays": "e8e459a5709789ac",
  "trails": "648bf4fbe439bc1f",
}
`;

exports[`layout goldens > careerMany {"searchId":null} @beside 1`] = `
{
  "attrs": "e19142dce06b19c4",
  "decor": "7b99d7164640466b",
  "delays": null,
  "trailDelays": "e8e459a5709789ac",
  "trails": "f94e8f0aa1d273e4",
}
`;

exports[`layout goldens > careerMany {"searchId":null} @phone 1`] = `
{
  "attrs": "a8570de7fa655103",
  "decor": "3d88ed0a8bc041bd",
  "delays": null,
  "trailDelays": "e8e459a5709789ac",
  "trails": "4d3bed385ff4e20e",
}
`;

exports[`layout goldens > careerMany {"searchId":null} @stacked 1`] = `
{
  "attrs": "ede9ea6929704f5b",
  "decor": "64fd7b24808b70fc",
  "delays": null,
  "trailDelays": "e8e459a5709789ac",
  "trails": "648bf4fbe439bc1f",
}
`;

exports[`layout goldens > careerTrio {"searchId":105} @beside 1`] = `
{
  "attrs": "77280d48bfca0bb9",
  "decor": "7b99d7164640466b",
  "delays": null,
  "trailDelays": "6e76de75dd4a66ba",
  "trails": "e1e954483b0e3bc1",
}
`;

exports[`layout goldens > careerTrio {"searchId":105} @phone 1`] = `
{
  "attrs": "547ea0cab98c9a81",
  "decor": "3d88ed0a8bc041bd",
  "delays": null,
  "trailDelays": "6e76de75dd4a66ba",
  "trails": "9680babf7a8f1938",
}
`;

exports[`layout goldens > careerTrio {"searchId":105} @stacked 1`] = `
{
  "attrs": "b587e7282b6afd2f",
  "decor": "64fd7b24808b70fc",
  "delays": null,
  "trailDelays": "6e76de75dd4a66ba",
  "trails": "90bd0c6493ca51c1",
}
`;

exports[`layout goldens > careerTrio {"searchId":null} @beside 1`] = `
{
  "attrs": "e19142dce06b19c4",
  "decor": "7b99d7164640466b",
  "delays": null,
  "trailDelays": "6e76de75dd4a66ba",
  "trails": "e1e954483b0e3bc1",
}
`;

exports[`layout goldens > careerTrio {"searchId":null} @phone 1`] = `
{
  "attrs": "a8570de7fa655103",
  "decor": "3d88ed0a8bc041bd",
  "delays": null,
  "trailDelays": "6e76de75dd4a66ba",
  "trails": "9680babf7a8f1938",
}
`;

exports[`layout goldens > careerTrio {"searchId":null} @stacked 1`] = `
{
  "attrs": "ede9ea6929704f5b",
  "decor": "64fd7b24808b70fc",
  "delays": null,
  "trailDelays": "6e76de75dd4a66ba",
  "trails": "90bd0c6493ca51c1",
}
`;

exports[`layout goldens > degScatter {"searchId":105} @beside 1`] = `
{
  "attrs": "7a97cbeb851010a2",
  "decor": "b4f548b595bdd55b",
  "delays": null,
  "trailDelays": null,
  "trails": null,
}
`;

exports[`layout goldens > degScatter {"searchId":105} @phone 1`] = `
{
  "attrs": "3d8806787b740f3a",
  "decor": "1c9497dd55e2b274",
  "delays": null,
  "trailDelays": null,
  "trails": null,
}
`;

exports[`layout goldens > degScatter {"searchId":105} @stacked 1`] = `
{
  "attrs": "0d329d94d12f6e14",
  "decor": "c0f5c6f3d58a7b3a",
  "delays": null,
  "trailDelays": null,
  "trails": null,
}
`;

exports[`layout goldens > degScatter {"searchId":null} @beside 1`] = `
{
  "attrs": "59898d349eeea30b",
  "decor": "b4f548b595bdd55b",
  "delays": null,
  "trailDelays": null,
  "trails": null,
}
`;

exports[`layout goldens > degScatter {"searchId":null} @phone 1`] = `
{
  "attrs": "81867654d8c39c4c",
  "decor": "1c9497dd55e2b274",
  "delays": null,
  "trailDelays": null,
  "trails": null,
}
`;

exports[`layout goldens > degScatter {"searchId":null} @stacked 1`] = `
{
  "attrs": "f6d5f505e06209fa",
  "decor": "c0f5c6f3d58a7b3a",
  "delays": null,
  "trailDelays": null,
  "trails": null,
}
`;

exports[`layout goldens > hopAnchor {"anchorId":0,"arriving":false} @beside 1`] = `
{
  "attrs": "642989fcdbf9def8",
  "decor": "a4dc59efbb606245",
  "delays": "81adf7d1bf8819f7",
  "trailDelays": null,
  "trails": null,
}
`;

exports[`layout goldens > hopAnchor {"anchorId":0,"arriving":false} @phone 1`] = `
{
  "attrs": "0393e253003ad26b",
  "decor": "deb43b788190dea4",
  "delays": "81adf7d1bf8819f7",
  "trailDelays": null,
  "trails": null,
}
`;

exports[`layout goldens > hopAnchor {"anchorId":0,"arriving":false} @stacked 1`] = `
{
  "attrs": "12f7725beac24da5",
  "decor": "24626671b0d47536",
  "delays": "81adf7d1bf8819f7",
  "trailDelays": null,
  "trails": null,
}
`;

exports[`layout goldens > hopAnchor {"anchorId":105,"arriving":false} @beside 1`] = `
{
  "attrs": "45554647f07f9413",
  "decor": "01bfde89eb333783",
  "delays": "b264d2e5e824e1ab",
  "trailDelays": null,
  "trails": null,
}
`;

exports[`layout goldens > hopAnchor {"anchorId":105,"arriving":false} @phone 1`] = `
{
  "attrs": "8db3ee7b5beb5e19",
  "decor": "6197ea993b11567e",
  "delays": "c925dab4aa0d4502",
  "trailDelays": null,
  "trails": null,
}
`;

exports[`layout goldens > hopAnchor {"anchorId":105,"arriving":false} @stacked 1`] = `
{
  "attrs": "fa8dbcfee6771325",
  "decor": "4b9c2a067e517578",
  "delays": "0770dabad5a1a9ae",
  "trailDelays": null,
  "trails": null,
}
`;

exports[`layout goldens > hopAnchor {"anchorId":105,"arriving":true} @beside 1`] = `
{
  "attrs": "17074594023b991b",
  "decor": "01bfde89eb333783",
  "delays": "b264d2e5e824e1ab",
  "trailDelays": null,
  "trails": null,
}
`;

exports[`layout goldens > hopAnchor {"anchorId":105,"arriving":true} @phone 1`] = `
{
  "attrs": "30e12ce81dce6ff0",
  "decor": "6197ea993b11567e",
  "delays": "c925dab4aa0d4502",
  "trailDelays": null,
  "trails": null,
}
`;

exports[`layout goldens > hopAnchor {"anchorId":105,"arriving":true} @stacked 1`] = `
{
  "attrs": "4e79f151c213bbbe",
  "decor": "4b9c2a067e517578",
  "delays": "0770dabad5a1a9ae",
  "trailDelays": null,
  "trails": null,
}
`;

exports[`layout goldens > hopBands null @beside 1`] = `
{
  "attrs": "642989fcdbf9def8",
  "decor": "a4dc59efbb606245",
  "delays": "81adf7d1bf8819f7",
  "trailDelays": null,
  "trails": null,
}
`;

exports[`layout goldens > hopBands null @phone 1`] = `
{
  "attrs": "0393e253003ad26b",
  "decor": "deb43b788190dea4",
  "delays": "81adf7d1bf8819f7",
  "trailDelays": null,
  "trails": null,
}
`;

exports[`layout goldens > hopBands null @stacked 1`] = `
{
  "attrs": "12f7725beac24da5",
  "decor": "24626671b0d47536",
  "delays": "81adf7d1bf8819f7",
  "trailDelays": null,
  "trails": null,
}
`;

exports[`layout goldens > hopSeed null @beside 1`] = `
{
  "attrs": "0fafc25f849e9af2",
  "decor": "bf21a9e8fbc5a384",
  "delays": null,
  "trailDelays": null,
  "trails": null,
}
`;

exports[`layout goldens > hopSeed null @phone 1`] = `
{
  "attrs": "366706f63875f9d5",
  "decor": "bf21a9e8fbc5a384",
  "delays": null,
  "trailDelays": null,
  "trails": null,
}
`;

exports[`layout goldens > hopSeed null @stacked 1`] = `
{
  "attrs": "1fa6dc7f7b93dca0",
  "decor": "bf21a9e8fbc5a384",
  "delays": null,
  "trailDelays": null,
  "trails": null,
}
`;

exports[`layout goldens > networkIntro {"focus":3} @beside 1`] = `
{
  "attrs": "3db137aea20121e4",
  "decor": "ccd58555bbf3c66a",
  "delays": "3af643a145dbf304",
  "paramWalk": {
    "clear": "2abadeb3ac6fbe6b",
    "fadeMs": 400,
    "labelAt": [],
    "ms": 701,
    "windows": "ba150de5a9d5bdab",
  },
  "trailDelays": null,
  "trails": null,
}
`;

exports[`layout goldens > networkIntro {"focus":3} @phone 1`] = `
{
  "attrs": "8249636a6ac94c3f",
  "decor": "c6a8a7f300a98c87",
  "delays": "3af643a145dbf304",
  "paramWalk": {
    "clear": "dc2aa89fce836ea0",
    "fadeMs": 400,
    "labelAt": [],
    "ms": 701,
    "windows": "ba150de5a9d5bdab",
  },
  "trailDelays": null,
  "trails": null,
}
`;

exports[`layout goldens > networkIntro {"focus":3} @stacked 1`] = `
{
  "attrs": "0c57e5a91fd3d3ec",
  "decor": "ccd58555bbf3c66a",
  "delays": "3af643a145dbf304",
  "paramWalk": {
    "clear": "d274ecdef7ea1bdc",
    "fadeMs": 400,
    "labelAt": [],
    "ms": 701,
    "windows": "ba150de5a9d5bdab",
  },
  "trailDelays": null,
  "trails": null,
}
`;

exports[`layout goldens > networkIntro {"focus":null} @beside 1`] = `
{
  "attrs": "358faa4d35a54e5f",
  "decor": "32cc0633dc69a255",
  "delays": "3af643a145dbf304",
  "trailDelays": null,
  "trails": null,
}
`;

exports[`layout goldens > networkIntro {"focus":null} @phone 1`] = `
{
  "attrs": "fbbcc533e5d02a00",
  "decor": "478ed14db2928619",
  "delays": "3af643a145dbf304",
  "trailDelays": null,
  "trails": null,
}
`;

exports[`layout goldens > networkIntro {"focus":null} @stacked 1`] = `
{
  "attrs": "eb37a2af46337f74",
  "decor": "32cc0633dc69a255",
  "delays": "3af643a145dbf304",
  "trailDelays": null,
  "trails": null,
}
`;

exports[`layout goldens > outro {"playhead":2006} @beside 1`] = `
{
  "attrs": "4967ba0dbf3a175a",
  "decor": "bf21a9e8fbc5a384",
  "delays": null,
  "trailDelays": null,
  "trails": "f07e8886d69f44b8",
}
`;

exports[`layout goldens > outro {"playhead":2006} @phone 1`] = `
{
  "attrs": "e9bcf932b9059406",
  "decor": "bf21a9e8fbc5a384",
  "delays": null,
  "trailDelays": null,
  "trails": "3137933911a92fa8",
}
`;

exports[`layout goldens > outro {"playhead":2006} @stacked 1`] = `
{
  "attrs": "f0fb89bff910d0c2",
  "decor": "bf21a9e8fbc5a384",
  "delays": null,
  "trailDelays": null,
  "trails": "68523910c7e3056c",
}
`;

exports[`layout goldens > outro null @beside 1`] = `
{
  "attrs": "5717dabd133901e0",
  "decor": "bf21a9e8fbc5a384",
  "delays": null,
  "trailDelays": null,
  "trails": "c031769f740452b6",
}
`;

exports[`layout goldens > outro null @phone 1`] = `
{
  "attrs": "84af82ab145d00ff",
  "decor": "bf21a9e8fbc5a384",
  "delays": null,
  "trailDelays": null,
  "trails": "59efcd1d42df7b1c",
}
`;

exports[`layout goldens > outro null @stacked 1`] = `
{
  "attrs": "5470a17e185729a7",
  "decor": "bf21a9e8fbc5a384",
  "delays": null,
  "trailDelays": null,
  "trails": "5ffb5268d13877bd",
}
`;

exports[`layout goldens > raceClose {"playhead":2006} @beside 1`] = `
{
  "attrs": "6055d6a96f6107e1",
  "decor": "baa49a6c598ac340",
  "delays": null,
  "trailDelays": "b349a3eb452c8f93",
  "trails": "f07e8886d69f44b8",
}
`;

exports[`layout goldens > raceClose {"playhead":2006} @phone 1`] = `
{
  "attrs": "55423734c099d1de",
  "decor": "854d9d61db0c12d7",
  "delays": null,
  "trailDelays": "b349a3eb452c8f93",
  "trails": "3137933911a92fa8",
}
`;

exports[`layout goldens > raceClose {"playhead":2006} @stacked 1`] = `
{
  "attrs": "238070deee60ac59",
  "decor": "c522a436a50724af",
  "delays": null,
  "trailDelays": "b349a3eb452c8f93",
  "trails": "68523910c7e3056c",
}
`;

exports[`layout goldens > raceClose null @beside 1`] = `
{
  "attrs": "1cab45610f016c03",
  "decor": "f158f177c4115115",
  "delays": null,
  "trailDelays": "b349a3eb452c8f93",
  "trails": "0a546b0343ce8b62",
}
`;

exports[`layout goldens > raceClose null @phone 1`] = `
{
  "attrs": "84ecfae99d87d41c",
  "decor": "4f80b7f825917477",
  "delays": null,
  "trailDelays": "b349a3eb452c8f93",
  "trails": "182bc02f27bb6162",
}
`;

exports[`layout goldens > raceClose null @stacked 1`] = `
{
  "attrs": "3f11070ae2b96b6d",
  "decor": "d473000f970a6c91",
  "delays": null,
  "trailDelays": "b349a3eb452c8f93",
  "trails": "7281bd7494f49223",
}
`;

exports[`layout goldens > raceFull {"playhead":2006} @beside 1`] = `
{
  "attrs": "d02b5ee0e7bbef58",
  "decor": "c3d8206dea465471",
  "delays": null,
  "trailDelays": "02becff878e6d0f2",
  "trails": "251ee6fdbdd7b793",
}
`;

exports[`layout goldens > raceFull {"playhead":2006} @phone 1`] = `
{
  "attrs": "99e855c7dd2bfda0",
  "decor": "5955fbdbc8b01dbf",
  "delays": null,
  "trailDelays": "02becff878e6d0f2",
  "trails": "a799faf71e1a2e2a",
}
`;

exports[`layout goldens > raceFull {"playhead":2006} @stacked 1`] = `
{
  "attrs": "58cb3280323e3c8a",
  "decor": "79ba95ab49bbc3d9",
  "delays": null,
  "trailDelays": "02becff878e6d0f2",
  "trails": "5610995ccfccb48d",
}
`;

exports[`layout goldens > raceFull null @beside 1`] = `
{
  "attrs": "d02b5ee0e7bbef58",
  "decor": "c3d8206dea465471",
  "delays": null,
  "trailDelays": "02becff878e6d0f2",
  "trails": "251ee6fdbdd7b793",
}
`;

exports[`layout goldens > raceFull null @phone 1`] = `
{
  "attrs": "99e855c7dd2bfda0",
  "decor": "5955fbdbc8b01dbf",
  "delays": null,
  "trailDelays": "02becff878e6d0f2",
  "trails": "a799faf71e1a2e2a",
}
`;

exports[`layout goldens > raceFull null @stacked 1`] = `
{
  "attrs": "58cb3280323e3c8a",
  "decor": "79ba95ab49bbc3d9",
  "delays": null,
  "trailDelays": "02becff878e6d0f2",
  "trails": "5610995ccfccb48d",
}
`;

exports[`layout goldens > raceFuture {"playhead":2006} @beside 1`] = `
{
  "attrs": "d02b5ee0e7bbef58",
  "decor": "c3d8206dea465471",
  "delays": null,
  "trailDelays": "02becff878e6d0f2",
  "trails": "251ee6fdbdd7b793",
}
`;

exports[`layout goldens > raceFuture {"playhead":2006} @phone 1`] = `
{
  "attrs": "99e855c7dd2bfda0",
  "decor": "5955fbdbc8b01dbf",
  "delays": null,
  "trailDelays": "02becff878e6d0f2",
  "trails": "a799faf71e1a2e2a",
}
`;

exports[`layout goldens > raceFuture {"playhead":2006} @stacked 1`] = `
{
  "attrs": "58cb3280323e3c8a",
  "decor": "79ba95ab49bbc3d9",
  "delays": null,
  "trailDelays": "02becff878e6d0f2",
  "trails": "5610995ccfccb48d",
}
`;

exports[`layout goldens > raceFuture null @beside 1`] = `
{
  "attrs": "09760dacf7f43801",
  "decor": "b6fce806a0b6d022",
  "delays": null,
  "trailDelays": "02becff878e6d0f2",
  "trails": "baa62b8efd28bccd",
}
`;

exports[`layout goldens > raceFuture null @phone 1`] = `
{
  "attrs": "1d2e20ab5621cbfb",
  "decor": "d56db62635973cfb",
  "delays": null,
  "trailDelays": "02becff878e6d0f2",
  "trails": "4e7e7e8dcddf433c",
}
`;

exports[`layout goldens > raceFuture null @stacked 1`] = `
{
  "attrs": "0234e87fb5a0f822",
  "decor": "e7522fb9a0289965",
  "delays": null,
  "trailDelays": "02becff878e6d0f2",
  "trails": "5738335dca2809d7",
}
`;

exports[`layout goldens > raceGenz {"genzShown":false} @beside 1`] = `
{
  "attrs": "acf21fc289fcdcbf",
  "decor": "d0f985d7da9fd74c",
  "delays": null,
  "trailDelays": "02becff878e6d0f2",
  "trails": "6f8c123077a61174",
}
`;

exports[`layout goldens > raceGenz {"genzShown":false} @phone 1`] = `
{
  "attrs": "c9fbd7329ea054d5",
  "decor": "8536b702b51464fe",
  "delays": null,
  "trailDelays": "02becff878e6d0f2",
  "trails": "603a762f8da4c554",
}
`;

exports[`layout goldens > raceGenz {"genzShown":false} @stacked 1`] = `
{
  "attrs": "b5accbf1a13790b2",
  "decor": "a454dbe6701ed7f5",
  "delays": null,
  "trailDelays": "02becff878e6d0f2",
  "trails": "0c6a09f391f72dc9",
}
`;

exports[`layout goldens > raceGenz {"genzShown":true} @beside 1`] = `
{
  "attrs": "2ea9dc18e77aba7f",
  "decor": "d0f985d7da9fd74c",
  "delays": null,
  "trailDelays": "02becff878e6d0f2",
  "trails": "9afe89bf5acd5af0",
}
`;

exports[`layout goldens > raceGenz {"genzShown":true} @phone 1`] = `
{
  "attrs": "e2ebd5eaea5189a5",
  "decor": "8536b702b51464fe",
  "delays": null,
  "trailDelays": "02becff878e6d0f2",
  "trails": "a17d0ad72b49a8aa",
}
`;

exports[`layout goldens > raceGenz {"genzShown":true} @stacked 1`] = `
{
  "attrs": "019e61bfd556481b",
  "decor": "a454dbe6701ed7f5",
  "delays": null,
  "trailDelays": "02becff878e6d0f2",
  "trails": "8b0358b30eebcb40",
}
`;

exports[`layout goldens > raceGenz {"playhead":2006,"genzShown":false} @beside 1`] = `
{
  "attrs": "c74c59ace0536ea3",
  "decor": "1d98e735053aeaf7",
  "delays": null,
  "trailDelays": "02becff878e6d0f2",
  "trails": "2560ef22c8b64d11",
}
`;

exports[`layout goldens > raceGenz {"playhead":2006,"genzShown":false} @phone 1`] = `
{
  "attrs": "a7d91d6fa6aa14ee",
  "decor": "f11e2862151f040e",
  "delays": null,
  "trailDelays": "02becff878e6d0f2",
  "trails": "dea7faaffed54966",
}
`;

exports[`layout goldens > raceGenz {"playhead":2006,"genzShown":false} @stacked 1`] = `
{
  "attrs": "55c0991ff815e7ec",
  "decor": "08ef1b91f30bd8c3",
  "delays": null,
  "trailDelays": "02becff878e6d0f2",
  "trails": "5b19ddb8fabff428",
}
`;

exports[`layout goldens > raceRecent {"playhead":2006} @beside 1`] = `
{
  "attrs": "d02b5ee0e7bbef58",
  "decor": "c3d8206dea465471",
  "delays": null,
  "trailDelays": "57327e672d6d2d0d",
  "trails": "251ee6fdbdd7b793",
}
`;

exports[`layout goldens > raceRecent {"playhead":2006} @phone 1`] = `
{
  "attrs": "99e855c7dd2bfda0",
  "decor": "5955fbdbc8b01dbf",
  "delays": null,
  "trailDelays": "57327e672d6d2d0d",
  "trails": "a799faf71e1a2e2a",
}
`;

exports[`layout goldens > raceRecent {"playhead":2006} @stacked 1`] = `
{
  "attrs": "58cb3280323e3c8a",
  "decor": "79ba95ab49bbc3d9",
  "delays": null,
  "trailDelays": "57327e672d6d2d0d",
  "trails": "5610995ccfccb48d",
}
`;

exports[`layout goldens > raceRecent null @beside 1`] = `
{
  "attrs": "6c98c2133008a495",
  "decor": "a2bfc25bef8408b3",
  "delays": null,
  "trailDelays": "57327e672d6d2d0d",
  "trails": "2d80856a7a49b4e4",
}
`;

exports[`layout goldens > raceRecent null @phone 1`] = `
{
  "attrs": "1d508a318fefbb06",
  "decor": "a0ca8fcc649e9a92",
  "delays": null,
  "trailDelays": "57327e672d6d2d0d",
  "trails": "f0596c752e115b44",
}
`;

exports[`layout goldens > raceRecent null @stacked 1`] = `
{
  "attrs": "2d1e3ec235295e91",
  "decor": "a4fb3d183fb8d9a3",
  "delays": null,
  "trailDelays": "57327e672d6d2d0d",
  "trails": "00d49dfbfd22ac56",
}
`;

exports[`layout goldens > rankFocus {"bar":{"x":120,"y":300,"w":400}} @beside 1`] = `
{
  "attrs": "ef4a5110c6e29864",
  "decor": "bf21a9e8fbc5a384",
  "delays": null,
  "trailDelays": null,
  "trails": null,
}
`;

exports[`layout goldens > rankFocus {"bar":{"x":120,"y":300,"w":400}} @phone 1`] = `
{
  "attrs": "ef4a5110c6e29864",
  "decor": "bf21a9e8fbc5a384",
  "delays": null,
  "trailDelays": null,
  "trails": null,
}
`;

exports[`layout goldens > rankFocus {"bar":{"x":120,"y":300,"w":400}} @stacked 1`] = `
{
  "attrs": "ef4a5110c6e29864",
  "decor": "bf21a9e8fbc5a384",
  "delays": null,
  "trailDelays": null,
  "trails": null,
}
`;

exports[`layout goldens > rankFocus {"bar":null} @beside 1`] = `
{
  "attrs": "61264c35ade46041",
  "decor": "bf21a9e8fbc5a384",
  "delays": null,
  "trailDelays": null,
  "trails": null,
}
`;

exports[`layout goldens > rankFocus {"bar":null} @phone 1`] = `
{
  "attrs": "135546ead4035805",
  "decor": "bf21a9e8fbc5a384",
  "delays": null,
  "trailDelays": null,
  "trails": null,
}
`;

exports[`layout goldens > rankFocus {"bar":null} @stacked 1`] = `
{
  "attrs": "61264c35ade46041",
  "decor": "bf21a9e8fbc5a384",
  "delays": null,
  "trailDelays": null,
  "trails": null,
}
`;

exports[`layout goldens > rankReveal {"bar":{"x":120,"y":300,"w":400}} @beside 1`] = `
{
  "attrs": "ef4a5110c6e29864",
  "decor": "bf21a9e8fbc5a384",
  "delays": null,
  "trailDelays": null,
  "trails": null,
}
`;

exports[`layout goldens > rankReveal {"bar":{"x":120,"y":300,"w":400}} @phone 1`] = `
{
  "attrs": "ef4a5110c6e29864",
  "decor": "bf21a9e8fbc5a384",
  "delays": null,
  "trailDelays": null,
  "trails": null,
}
`;

exports[`layout goldens > rankReveal {"bar":{"x":120,"y":300,"w":400}} @stacked 1`] = `
{
  "attrs": "ef4a5110c6e29864",
  "decor": "bf21a9e8fbc5a384",
  "delays": null,
  "trailDelays": null,
  "trails": null,
}
`;

exports[`layout goldens > rankReveal {"bar":null} @beside 1`] = `
{
  "attrs": "61264c35ade46041",
  "decor": "bf21a9e8fbc5a384",
  "delays": null,
  "trailDelays": null,
  "trails": null,
}
`;

exports[`layout goldens > rankReveal {"bar":null} @phone 1`] = `
{
  "attrs": "135546ead4035805",
  "decor": "bf21a9e8fbc5a384",
  "delays": null,
  "trailDelays": null,
  "trails": null,
}
`;

exports[`layout goldens > rankReveal {"bar":null} @stacked 1`] = `
{
  "attrs": "61264c35ade46041",
  "decor": "bf21a9e8fbc5a384",
  "delays": null,
  "trailDelays": null,
  "trails": null,
}
`;

exports[`layout goldens > scatterCenters {"showFilms":true,"searchId":105} @beside 1`] = `
{
  "attrs": "4abe97075ef534ed",
  "decor": "d287121550d8e8bf",
  "delays": null,
  "trailDelays": null,
  "trails": null,
}
`;

exports[`layout goldens > scatterCenters {"showFilms":true,"searchId":105} @phone 1`] = `
{
  "attrs": "4ff4b1e437069add",
  "decor": "fb4eb942f199d0e4",
  "delays": null,
  "trailDelays": null,
  "trails": null,
}
`;

exports[`layout goldens > scatterCenters {"showFilms":true,"searchId":105} @stacked 1`] = `
{
  "attrs": "22e9eaeebc8bef53",
  "decor": "891ab2c583225bfd",
  "delays": null,
  "trailDelays": null,
  "trails": null,
}
`;

exports[`layout goldens > scatterCenters {"showFilms":true,"searchId":null} @beside 1`] = `
{
  "attrs": "d4d89be7dda8103d",
  "decor": "d287121550d8e8bf",
  "delays": null,
  "trailDelays": null,
  "trails": null,
}
`;

exports[`layout goldens > scatterCenters {"showFilms":true,"searchId":null} @phone 1`] = `
{
  "attrs": "0b30e3e7410f040a",
  "decor": "fb4eb942f199d0e4",
  "delays": null,
  "trailDelays": null,
  "trails": null,
}
`;

exports[`layout goldens > scatterCenters {"showFilms":true,"searchId":null} @stacked 1`] = `
{
  "attrs": "6da41b475f2d5d82",
  "decor": "891ab2c583225bfd",
  "delays": null,
  "trailDelays": null,
  "trails": null,
}
`;

exports[`layout goldens > scatterCenters {"showPair":true,"searchId":105} @beside 1`] = `
{
  "attrs": "ee56982b34ce8e3d",
  "decor": "d287121550d8e8bf",
  "delays": null,
  "trailDelays": null,
  "trails": null,
}
`;

exports[`layout goldens > scatterCenters {"showPair":true,"searchId":105} @phone 1`] = `
{
  "attrs": "7ed4035e2678153e",
  "decor": "fb4eb942f199d0e4",
  "delays": null,
  "trailDelays": null,
  "trails": null,
}
`;

exports[`layout goldens > scatterCenters {"showPair":true,"searchId":105} @stacked 1`] = `
{
  "attrs": "64149efff5d220b2",
  "decor": "891ab2c583225bfd",
  "delays": null,
  "trailDelays": null,
  "trails": null,
}
`;

exports[`layout goldens > scatterCenters {"showPair":true,"searchId":null} @beside 1`] = `
{
  "attrs": "cb81ea1b3e4d567b",
  "decor": "d287121550d8e8bf",
  "delays": null,
  "trailDelays": null,
  "trails": null,
}
`;

exports[`layout goldens > scatterCenters {"showPair":true,"searchId":null} @phone 1`] = `
{
  "attrs": "5747288aa1b5a238",
  "decor": "fb4eb942f199d0e4",
  "delays": null,
  "trailDelays": null,
  "trails": null,
}
`;

exports[`layout goldens > scatterCenters {"showPair":true,"searchId":null} @stacked 1`] = `
{
  "attrs": "25103531f8241408",
  "decor": "891ab2c583225bfd",
  "delays": null,
  "trailDelays": null,
  "trails": null,
}
`;

exports[`layout goldens > scatterCenters {"showPair":true,"showCostars":true,"searchId":105} @beside 1`] = `
{
  "attrs": "ee56982b34ce8e3d",
  "decor": "d287121550d8e8bf",
  "delays": null,
  "trailDelays": null,
  "trails": null,
}
`;

exports[`layout goldens > scatterCenters {"showPair":true,"showCostars":true,"searchId":105} @phone 1`] = `
{
  "attrs": "7ed4035e2678153e",
  "decor": "fb4eb942f199d0e4",
  "delays": null,
  "trailDelays": null,
  "trails": null,
}
`;

exports[`layout goldens > scatterCenters {"showPair":true,"showCostars":true,"searchId":105} @stacked 1`] = `
{
  "attrs": "64149efff5d220b2",
  "decor": "891ab2c583225bfd",
  "delays": null,
  "trailDelays": null,
  "trails": null,
}
`;

exports[`layout goldens > scatterCenters {"showPair":true,"showCostars":true,"searchId":null} @beside 1`] = `
{
  "attrs": "cb81ea1b3e4d567b",
  "decor": "d287121550d8e8bf",
  "delays": null,
  "trailDelays": null,
  "trails": null,
}
`;

exports[`layout goldens > scatterCenters {"showPair":true,"showCostars":true,"searchId":null} @phone 1`] = `
{
  "attrs": "5747288aa1b5a238",
  "decor": "fb4eb942f199d0e4",
  "delays": null,
  "trailDelays": null,
  "trails": null,
}
`;

exports[`layout goldens > scatterCenters {"showPair":true,"showCostars":true,"searchId":null} @stacked 1`] = `
{
  "attrs": "25103531f8241408",
  "decor": "891ab2c583225bfd",
  "delays": null,
  "trailDelays": null,
  "trails": null,
}
`;

exports[`layout goldens > scatterQuiz {"picks":{"0":1},"revealAll":true,"searchId":null} @beside 1`] = `
{
  "attrs": "2dd5cb02adfce873",
  "decor": "d287121550d8e8bf",
  "delays": null,
  "trailDelays": null,
  "trails": null,
}
`;

exports[`layout goldens > scatterQuiz {"picks":{"0":1},"revealAll":true,"searchId":null} @phone 1`] = `
{
  "attrs": "0ea8cd99e702471f",
  "decor": "fb4eb942f199d0e4",
  "delays": null,
  "trailDelays": null,
  "trails": null,
}
`;

exports[`layout goldens > scatterQuiz {"picks":{"0":1},"revealAll":true,"searchId":null} @stacked 1`] = `
{
  "attrs": "5ece39f5dbc10041",
  "decor": "891ab2c583225bfd",
  "delays": null,
  "trailDelays": null,
  "trails": null,
}
`;

exports[`layout goldens > scatterQuiz {"picks":{},"revealAll":false,"searchId":105} @beside 1`] = `
{
  "attrs": "0c6473c15572bc69",
  "decor": "d287121550d8e8bf",
  "delays": null,
  "trailDelays": null,
  "trails": null,
}
`;

exports[`layout goldens > scatterQuiz {"picks":{},"revealAll":false,"searchId":105} @phone 1`] = `
{
  "attrs": "8997952b36b2de0d",
  "decor": "fb4eb942f199d0e4",
  "delays": null,
  "trailDelays": null,
  "trails": null,
}
`;

exports[`layout goldens > scatterQuiz {"picks":{},"revealAll":false,"searchId":105} @stacked 1`] = `
{
  "attrs": "1f13b44d28a08a76",
  "decor": "891ab2c583225bfd",
  "delays": null,
  "trailDelays": null,
  "trails": null,
}
`;

exports[`layout goldens > scatterQuiz {"picks":{},"revealAll":false,"searchId":null} @beside 1`] = `
{
  "attrs": "55d6100215b40c10",
  "decor": "d287121550d8e8bf",
  "delays": null,
  "trailDelays": null,
  "trails": null,
}
`;

exports[`layout goldens > scatterQuiz {"picks":{},"revealAll":false,"searchId":null} @phone 1`] = `
{
  "attrs": "9984c41becad4180",
  "decor": "fb4eb942f199d0e4",
  "delays": null,
  "trailDelays": null,
  "trails": null,
}
`;

exports[`layout goldens > scatterQuiz {"picks":{},"revealAll":false,"searchId":null} @stacked 1`] = `
{
  "attrs": "15546f55b3769f67",
  "decor": "891ab2c583225bfd",
  "delays": null,
  "trailDelays": null,
  "trails": null,
}
`;

exports[`layout goldens > simRace {"runs":0,"names":0} @beside 1`] = `
{
  "attrs": "10226467fc237f8c",
  "decor": "080cb30d9888a7d1",
  "delays": null,
  "trailDelays": null,
  "trails": "86b46b362892c32c",
}
`;

exports[`layout goldens > simRace {"runs":0,"names":0} @phone 1`] = `
{
  "attrs": "bd0800e511e95701",
  "decor": "a72b86267340a5d6",
  "delays": null,
  "trailDelays": null,
  "trails": "863c09ed0cd82558",
}
`;

exports[`layout goldens > simRace {"runs":0,"names":0} @stacked 1`] = `
{
  "attrs": "348a6018220aa3b9",
  "decor": "7b04c5ef1e53acbd",
  "delays": null,
  "trailDelays": null,
  "trails": "5b995767da8e8694",
}
`;

exports[`layout goldens > simRace {"runs":10000,"names":5} @beside 1`] = `
{
  "attrs": "69264ebc916416c6",
  "decor": "080cb30d9888a7d1",
  "delays": null,
  "trailDelays": null,
  "trails": "af06ea4ed5fb4418",
}
`;

exports[`layout goldens > simRace {"runs":10000,"names":5} @phone 1`] = `
{
  "attrs": "22e355645fc2d626",
  "decor": "a72b86267340a5d6",
  "delays": null,
  "trailDelays": null,
  "trails": "58f1c21582e9e72d",
}
`;

exports[`layout goldens > simRace {"runs":10000,"names":5} @stacked 1`] = `
{
  "attrs": "b3a1f816c72573a1",
  "decor": "7b04c5ef1e53acbd",
  "delays": null,
  "trailDelays": null,
  "trails": "d672d72b6ffa9433",
}
`;

exports[`layout goldens > titleGalaxy null @beside 1`] = `
{
  "attrs": "0fafc25f849e9af2",
  "decor": "bf21a9e8fbc5a384",
  "delays": null,
  "trailDelays": null,
  "trails": null,
}
`;

exports[`layout goldens > titleGalaxy null @phone 1`] = `
{
  "attrs": "366706f63875f9d5",
  "decor": "bf21a9e8fbc5a384",
  "delays": null,
  "trailDelays": null,
  "trails": null,
}
`;

exports[`layout goldens > titleGalaxy null @stacked 1`] = `
{
  "attrs": "1fa6dc7f7b93dca0",
  "decor": "bf21a9e8fbc5a384",
  "delays": null,
  "trailDelays": null,
  "trails": null,
}
`;
